# tama

./: .gitignore  ATTRIBUTIONS.md  Cargo.toml  README.md  build.rs  memory.x
DayOff/: README.md
assets/: README.md
elthen-cats/: README.md
firmware/: Cargo.toml  README.md  build.rs
firmware/.cargo/: config.toml
firmware/assets/: README.md  attributions.md
firmware/src/: display.rs  fb.rs  main.rs  world.rs
hardware/: fp-lib-table  hardware.kicad_pcb  hardware.kicad_pro  tama.kicad_sym
itch/: README.md  build_emotes.py
kicad/: freerouting.dsn  hardware.kicad_sch  sym-lib-table
kicad/Tama Footprints.pretty/: Battery.kicad_mod  GC9A01_1.28in_Module.kicad_mod
pygame/: main.py  pyproject.toml
scripts/: build_emotes.py
src/: cat.rs  display.rs  fb.rs  game.rs  input.rs  main.rs  sprites.rs  world.rs
tools/: render_demo.py  render_sheet.py
