[package]
name = "tama"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf-pac = { version = "0.3", features = ["nrf54l15-app"] }

[profile.release]
debug = true
lto = true
opt-level = "s"
