[package]
name = "tama"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

embassy-executor = { version = "0.10", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-nrf = { version = "0.10", features = ["nrf54l15-app-s", "time-driver-grtc", "gpiote", "time", "defmt"] }
embassy-time = { version = "0.5", features = ["defmt", "defmt-timestamp-uptime"] }

embedded-hal = "1.0"
embedded-hal-bus = "0.3"
embedded-graphics = "0.8"
mipidsi = "0.9"
static_cell = "2"

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
debug = true
lto = true
opt-level = "s"
